Adding Common Github actions final change

--- a/.github/workflows/Developer_Branch_CI.yml
+++ b/.github/workflows/Developer_Branch_CI.yml
@@ -5,19 +5,7 @@ on:
       - 'XPNS-*'
 jobs:
   CI_Steps:
-    runs-on: self-hosted
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Unit Tests
-        run: echo Unit Tests
-
-      - name: Integration Tests
-        run: echo Integration Tests
-
-      - name: Code Quality
-        run: echo Code Quality
+    uses: raghudevopsb77/github-actions/.github/workflows/Developer_Branch_CI.yml@main
 
 
 
