--- a/.github/workflows/Developer_Pull_Request.yml
+++ b/.github/workflows/Developer_Pull_Request.yml
@@ -5,25 +5,5 @@ on:
       - 'main'
 jobs:
   CI_Steps:
-    runs-on: self-hosted
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Unit Tests
-        run: echo Unit Tests
-
-      - name: Integration Tests
-        run: echo Integration Tests
-
-      - name: SAST Scans
-        run: echo SAST Scans
-
-      - name: Detect Secrets in Source Code
-        run: echo Detect Secrets in Source Code
-
-      - name: Code Quality
-        run: echo Code Quality
-
-
+    uses: raghudevopsb77/github-actions/.github/workflows/Developer_Pull_Request.yml@main
 
