--- a/.github/workflows/Developer_Branch_CI.yml
+++ b/.github/workflows/Developer_Branch_CI.yml
@@ -3,6 +3,11 @@ on:
   push:
     branches:
       - 'XPNS-*'
+
+env:
+  service_name: expense-frontend
+
+
 jobs:
   CI_Steps:
     uses: raghudevopsb77/github-actions/.github/workflows/Developer_Branch_CI.yml@main
