--- a/.github/workflows/Developer_Pull_Request.yml
+++ b/.github/workflows/Developer_Pull_Request.yml
@@ -3,6 +3,11 @@ on:
   pull_request:
     branches:
       - 'main'
+
+env:
+  service_name: expense-frontend
+
+
 jobs:
   CI_Steps:
     uses: raghudevopsb77/github-actions/.github/workflows/Developer_Pull_Request.yml@main
