--- a/.github/workflows/Developer_Branch_CI.yml
+++ b/.github/workflows/Developer_Branch_CI.yml
@@ -11,6 +11,7 @@ env:
 jobs:
   CI_Steps:
     uses: raghudevopsb77/github-actions/.github/workflows/Developer_Branch_CI.yml@main
-
+    with:
+      service_name: expense-frontend
 
 
