--- a/.github/workflows/Developer_Pull_Request.yml
+++ b/.github/workflows/Developer_Pull_Request.yml
@@ -11,4 +11,5 @@ env:
 jobs:
   CI_Steps:
     uses: raghudevopsb77/github-actions/.github/workflows/Developer_Pull_Request.yml@main
-
+    with:
+      service_name: expense-frontend
