--- a/.github/workflows/Developer_Pull_Request.yml
+++ b/.github/workflows/Developer_Pull_Request.yml
@@ -11,5 +11,6 @@ env:
 jobs:
   CI_Steps:
     uses: raghudevopsb77/github-actions/.github/workflows/Developer_Pull_Request.yml@main
+    secrets: inherit
     with:
       service_name: expense-frontend
